--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -1,3 +1,4 @@
+<%# カレンダーのフォーム %>
 <%= form_with model: @plan, url: calendars_path, class: 'form' do |f| %>
   <%= f.label :日付を選択, class: 'label' %>
   <%= f.date_field :date, class: 'date-select' %>
@@ -6,6 +7,7 @@
   <%= f.submit '保存' %>
 <% end %>
 
+<%# 予定表示用カレンダー %>
 <div class='calendar'>
   <% @week_days.each do |day| %>
     <div class='item'>
